<resources>
    <string name="app_name">PrimerTaller</string>
    <string name="check_recordar">Recordar mis datos</string>
    <string name="check_terminos">Terminos y condiciones</string>
    <string name="text_usuario">Correo</string>
    <string name="text_password">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="RegistroTitle">Registro</string>
    <string name="text_password_again">Ingrese nuevamente la contraseña</string>
    <string name="btn_regresar">Regresar</string>
    <string name="register_nombre">Nombre</string>
    <string name="register_apellido">Apellido</string>
    <string name="register_sexo">Sexo</string>
    <string name="enviarcodigo">ENVIAR CÓDIGO</string>
    <string name="validar">VALIDAR</string>
    <string name="restablecer">RESTABLECER</string>
    <string name="subrayada">SUBRAYADA</string>
    <string name="italica">ITALICA</string>
    <string name="negrita">NEGRITA</string>
    <string name="fisica">FÍSICA</string>
    <string name="velocidad">VELOCIDAD</string>
    <string name="fuerza">FUERZA</string>
    <string name="voltaje">VOLTAJE</string>
    <string name="hallar">HALLAR</string>
    <string name="hallarfuerza">HALLAR FUERZA</string>
    <string name="calcular">CALCULAR</string>
    <string name="FISICA">FISICA</string>
    <string name="VELOCIDAD">VELOCIDAD</string>
    <string name="FUERZA">FUERZA</string>
    <string name="VOLTAJE">VOLTAJE</string>
    <string name="TEXTO">TEXTO</string>
    <string name="GEOMETRIA">GEOMETRIA</string>
    <string name="HALLAR_VOLTAJE">HALLAR VOLTAJE</string>
    <string name="BIENVENIDO">BIENVENIDO</string>

    <string-array name="spinner_sexo">
        <item>M</item>
        <item>F</item>
    </string-array>

    <string-array name="spinner_geometria">
        <item>ubicación en cuadrantes</item>
        <item>Pendiente</item>
        <item>Distancia</item>
    </string-array>
    <string-array name="spinner">
        <item>2</item>
        <item>3</item>

    </string-array>
</resources>