<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#606060"
    android:paddingLeft="20sp"
    android:paddingTop="20sp"
    android:paddingRight="20sp"
    android:paddingBottom="20sp"
    tools:context=".TextoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_radius"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">


        <androidx.cardview.widget.CardView
            android:layout_width="110sp"
            android:layout_height="110sp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            app:cardCornerRadius="300sp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/avatar"
                tools:srcCompat="@drawable/nota" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingrese su texto en el siguiente recuadro:"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtmtextouser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbnegrita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/negrita" />

            <CheckBox
                android:id="@+id/cbitalica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/italica" />

            <CheckBox
                android:id="@+id/cbsubrayada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subrayada" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnvalidarcb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/validar"
                app:backgroundTint="#689F38"
                app:cornerRadius="20sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>