<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#606060"
    android:orientation="vertical"
    tools:context=".FisicaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20sp"
        android:layout_weight="1"
        android:background="@drawable/border_radius"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingRight="20sp">


        <androidx.cardview.widget.CardView
            android:layout_width="110sp"
            android:layout_height="110sp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            app:cardCornerRadius="300sp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/einstein"
                tools:srcCompat="@drawable/einstein" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fisica"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnvelocidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/velocidad"
                app:backgroundTint="#303F9F"
                app:cornerRadius="20sp" />

            <Button
                android:id="@+id/btnfuerza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/fuerza"
                app:backgroundTint="#512DA8"
                app:cornerRadius="20sp" />

            <Button
                android:id="@+id/btnvoltaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/voltaje"
                app:backgroundTint="#7B1FA2"
                app:cornerRadius="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="11"
        android:background="#FFFFFF">

        <ImageButton
            android:id="@+id/imgbtnayuda"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/ic_baseline_help_24" />

        <ImageButton
            android:id="@+id/imgbtnhome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/ic_baseline_home_24" />

        <ImageButton
            android:id="@+id/imgbtnexit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/ic_baseline_exit_to_app_24" />
    </LinearLayout>
</LinearLayout>