<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#606060"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"

        android:orientation="vertical"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/border_radius"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="110sp"
            android:layout_height="110sp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            app:cardCornerRadius="300sp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/iniciar_sesion"
                tools:srcCompat="@drawable/iniciar_sesion" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="2"
                android:text="@string/text_usuario"
                android:textColor="#FDFDFD"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/edit_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textColorHint="#FAF9F9" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="2"
                android:text="@string/text_password"
                android:textColor="#FDFDFD"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <Button
                    android:id="@+id/btn_verPassword"
                    android:layout_width="10sp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    app:backgroundTint="#E91E63"
                    app:cornerRadius="100sp"

                    app:icon="@drawable/password_show"

                    app:iconGravity="textStart"
                    app:iconPadding="0dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_login_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="1"
                    android:text="Datos incorrectos"
                    android:textColor="#DF6868" />

                <TextView
                    android:id="@+id/txvolvidar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginRight="5sp"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:clickable="true"
                    android:gravity="bottom|center"
                    android:linksClickable="false"
                    android:text="¿Olvidaste tú contraseña?"
                    android:textColor="#F6F3F3" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/check_recordar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/check_recordar"
                android:textColor="#F6F2F2" />

            <CheckBox
                android:id="@+id/check_terminos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_terminos"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:text="@string/btn_ingresar"
                app:backgroundTint="#68EC8E"
                app:cornerRadius="100sp" />

            <Button
                android:id="@+id/btn_registrar_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:text="@string/btn_registrar"
                app:backgroundTint="#E91E63"
                app:cornerRadius="100sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>