<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#606060"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombre_home_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20sp"
        android:layout_weight="0.6"
        android:background="@drawable/border_radius"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnfisica"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20sp"
                android:layout_weight="1"
                android:text="@string/FISICA"

                android:textColor="#070000"

                app:backgroundTint="#6DBBAA"
                app:cornerRadius="50sp" />

            <Button
                android:id="@+id/btngeometria"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20sp"
                android:layout_weight="1"

                android:text="@string/GEOMETRIA"
                android:textColor="#000000"

                app:backgroundTint="#F8AD08"
                app:cornerRadius="50sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btntexto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15sp"
                android:layout_weight="1"
                android:text="@string/TEXTO"
                android:textColor="#000000"
                app:backgroundTint="#6D648B"
                app:cornerRadius="50sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.76"
        android:background="#FFFFFF">

        <ImageButton
            android:id="@+id/imgbtnayuda"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/ic_baseline_help_24" />

        <ImageButton
            android:id="@+id/imgbtnhome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/ic_baseline_home_24" />

        <ImageButton
            android:id="@+id/imgbtnexit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/ic_baseline_exit_to_app_24" />
    </LinearLayout>

</LinearLayout>